--- a/src/app/components/consulta-saldo/consulta-saldo.component.html
+++ b/src/app/components/consulta-saldo/consulta-saldo.component.html
@@ -1,7 +1,7 @@
 <section>
   <h1>Consulta Saldo</h1>
   <header>
-    <div>
+    <div class="atenuado">
       Último login : {{ cliente.ultimoLogin | date }}
     </div>
     <div>
